--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,6 @@ Repository = "https://github.com/lordgasmic/ComfyUI-Wildcards"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "lordgasmic"
 DisplayName = "ComfyUI-Wildcards"
 Icon = ""
